go to voting and add link to repo

--- a/tip/572.md
+++ b/tip/572.md
@@ -1,6 +1,6 @@
 # TIP 572: Implement a mechanism to specify the procedure/lambda/method argument call types (Evaluation strategy)
 	Author:         Rami Khaldi <rami.khaldi@fau.de>
-	State:          Draft
+	State:          Voting
 	Type:           Project
 	Tcl-Version:    9
 -----
@@ -219,9 +219,12 @@ create
 update
 delete
 
-# Reference Implementation
+# Reference Implementation including tests
 
 The code is licensed under the BSD license.
+
+[`tip-572`](https://github.com/ramikhaldi/tcl.git).
+
 
 # Testing
 
