fix example in TIP#572

--- a/tip/572.md
+++ b/tip/572.md
@@ -63,9 +63,12 @@ Actually anything different than & will be interpreted as call by value. Only th
     # Sepecify the call strategy for the command: manipulateData (Only the fifth argument will be passed by value. The other ones will be passed by name)
     callstrat manipulateData & & & & * &
 
+    #Call the target procedure
+    manipulateData a b c d $e f
+
     # See the side-effects for arguments passed by name
 
-    # a -> 1
+    # a -> 2
     # b -> 2-3 
     # c -> WasDict
     # d -> EXAMPLE
@@ -219,7 +222,7 @@ create
 update
 delete
 
-# Reference Implementation including tests
+# Implementation
 
 The code is licensed under the BSD license.
 
