correct typo in TIP#572

--- a/tip/572.md
+++ b/tip/572.md
@@ -60,7 +60,7 @@ Actually anything different than & will be interpreted as call by value. Only th
         set f(Z) 300
     }
 
-    # Sepecify the call strategy for the command: manipulateData (Only the fifth argument will be passed by value. The other ones will be passed by name)
+    # Specify the call strategy for the command: manipulateData (Only the fifth argument will be passed by value. The other ones will be passed by name)
     callstrat manipulateData & & & & * &
 
     #Call the target procedure
