Add performance analysis section for TIP#572

--- a/tip/572.md
+++ b/tip/572.md
@@ -222,6 +222,51 @@ create
 update
 delete
 
+
+# Performance Analysis
+
+The TclX profiler has been used.
+
+    profile on
+    
+    set iter 10000000
+    
+    set a1 0
+    set a2 0
+    
+    proc myProc1 {a} {
+    	upvar $a l
+    	incr l
+    }
+    
+    proc myProc2 {a} {
+    	incr a
+    }
+    callstrat myProc2 &
+    
+    for {set i 0} { $i < $iter} {incr i} {
+    	myProc1 a1
+    	myProc2 a2
+    }
+    
+    puts $a1
+    puts $a2
+    
+    profile off res;
+    profrep res cpu profdata.txt;
+
+## Results
+
+------------------------|--------------|-----------|----------
+Procedure Call Stack    |      Calls   | Real Time |  CPU Time
+------------------------|--------------|-----------|----------
+<global>                |          1   |  300772   |  299964
+myProc1                 |   10000000   |   91320   |   91000
+myProc2                 |   10000000   |   50597   |   51260
+history                 |         19   |       0   |       0
+tcl::HistAdd            |         19   |       0   |       0
+
+
 # Implementation
 
 The code is licensed under the BSD license.
