--- a/tip/574.md
+++ b/tip/574.md
@@ -7,7 +7,8 @@
 	Post-History:   
 	Keywords:       Tk Ttk treeview tag
 	Tcl-Version:    8.7
-	Tcl-Branch:     bug-1bb2f1d7ab, TIP-574
+	Tcl-Branch:     bug-1bb2f1d7ab
+	Tcl-Branch:     TIP-574
 -----
 
 # Abstract
