Set state of tips to 'Deferred' because of missing sponsor

--- a/tip/556.md
+++ b/tip/556.md
@@ -1,6 +1,6 @@
 # TIP 556: Add oo like widgets to Tk
 	Author:         René Zaumseil <r.zaumseil@freenet.de>
-	State:          Draft
+	State:         	Deferred
 	Type:           Project
 	Vote:           Done
 	Created:        26-Nov-2019
@@ -10,6 +10,8 @@
 	Tk-Branch:      tip-556
 -----
 
+**This tip is deferred because I could not find a sponsor for it.**
+ 
 # Abstract
 
 This tip proposes to add the following oo class widget commands and functions to deal with options at the class and object level. A C function interface allows creation of new oo class like widgets.
