--- a/tip/510.md
+++ b/tip/510.md
@@ -1,6 +1,6 @@
 # TIP 510: Add Rbc and Tkpath widgets to Tk
 	Author:         René Zaumseil <r.zaumseil@freenet.de>
-	State:          Draft
+	State:          Deferred
 	Type:           Project
 	Vote:           Done
 	Created:        5-Jun-2018
@@ -15,6 +15,8 @@
 	Vote-Comments:  code not yet ready, needs porting to macOS; alternate
 	                might be to just co-distribute, just as TDBC is with Tcl
 -----
+
+**This tip depends on tip556. It is deferred until tip556 is accepted.**
 
 # Abstract
 
