TIP #574 : vote in progress

--- a/tip/574.md
+++ b/tip/574.md
@@ -2,7 +2,7 @@
 	Author:         Emiliano Gavilan <egavilan@fceia.unr.edu.ar>, Francois Vogel <fvogelnew1@free.fr>
 	State:          Draft
 	Type:           Project
-	Vote:           Pending
+	Vote:           In progress
 	Created:        8-May-2020
 	Post-History:   
 	Keywords:       Tk Ttk treeview tag
