Put #572 back in Draft, because we are not voting yet: there is no sponsor

--- a/tip/572.md
+++ b/tip/572.md
@@ -1,8 +1,8 @@
 # TIP 572: Implement a mechanism to specify the procedure/lambda/method argument call types (Evaluation strategy)
 	Author:         Rami Khaldi <rami.khaldi@fau.de>
-	State:          Voting
+	State:          Draft
 	Type:           Project
-	Tcl-Version:    9
+	Tcl-Version:    9.0
 -----
 
 # Abstract
