Update vote results and status for TIP-551

--- a/tip/551.md
+++ b/tip/551.md
@@ -1,14 +1,19 @@
 # TIP 551: Permit underscore in numerical literals in source code
     Author:        Eric Taylor <tips@rocketship1.me>
-    State:         Draft
+    State:         Final
     Type:          Project
-    Vote:          Pending
+    Vote:          Done
     Created:       16-Sep-2019
     Post-History:
     Tcl-Version:   8.7
     Tcl-Branch:    tip-551
     Keywords:      numbers, readability
     Sponsor:       Brian Griffin <brian_griffin@mentor.com>
+    Vote-Summary:  Accepted 6/0/2
+    Vote-For:      BG,KW,MC,FV,JN,SL
+    Vote-Against:  none
+    Vote-Present:  DP,KK
+-----
 
 # Abstract
 
