TIP529 (image -metadata): Add thoughts about avoiding double-parsing of svg images using the -metadata dict.

--- a/tip/529.md
+++ b/tip/529.md
@@ -165,6 +165,38 @@ But it is not suitable for image write, as the required photo handle is not pass
 
 In consequence, the write function should be extended by the metadata object pointer.
 
+# Discussion
+
+## Buffer the svg spline data to avoid double-parsing
+
+Another aim I want to reach with this TIP is to find a way to avoid multiple-parsing of svg files. The used svg routines from the nanosvg project split svg processing into two steps:
+
+   *   Step 1: transform the xml data to a binary representation of the splines
+   *   Step 2: render the splines to an image presentation
+
+When svg files are loaded by:
+
+    image create photo i1 -file test.svg -format {svg -scaletoheight 16}
+
+then the file is accessed and the xml data loaded and processing step 1 and 2 is performed.
+
+When the image is scaled by:
+
+    i1 configure -format {svg -scaletoheight 32}
+
+then the same steps are performed as on image load, while only step 2 would be necessary.
+Performance is poor and the file must still be available.
+
+My plan is to store the binary representation of the splines (result of processing step 1) as a key of **-metadata** (say splinesblob) and to acheve to only perform step 2 on scaling.
+
+In addition, svg image may even "compiled" to the metadata structure, so the following command may work:
+
+    image create i1 -metadata {splineblob ...} -format {svg -scaletoheight 32}
+
+This will only work within the same patchlevel of TK, as the format may change, but it may be useful for example when packing to a starkit.
+
+In my talk on ETCL 2019, I showed an Android GUI where buttons may be scaled by a pinch to zoom gesture. The current performance is quite poor.
+
 # Copyright
 
 This document has been placed in the public domain.
