TIP #574 accepted 7/0/0: YES: 7 (Culler, Decoster, Fellows, Griffin, Kenny, Landers, Vogel). NO: -. PRESENT: -. Vote conclusion email was sent 24-May-2020 to Tcl Core list. Implementation was merged the same day.

--- a/tip/574.md
+++ b/tip/574.md
@@ -1,14 +1,18 @@
 # TIP 574: Add a 'tag delete' command to the ttk::treeview widget
 	Author:         Emiliano Gavilan <egavilan@fceia.unr.edu.ar>, Francois Vogel <fvogelnew1@free.fr>
-	State:          Draft
+	State:          Final
 	Type:           Project
-	Vote:           In progress
+	Vote:           Done
 	Created:        8-May-2020
 	Post-History:   
 	Keywords:       Tk Ttk treeview tag
 	Tcl-Version:    8.7
 	Tk-Branch:      tip-574
 	Tk-Branch:      bug-1bb2f1d7ab
+	Vote-Summary:   Accepted 7/0/0
+	Votes-For:      MC, JD, DKF, BG, KBK, SL, FV
+	Votes-Present:  none
+	Votes-Against:  none
 -----
 
 # Abstract
