TIP529: image metadata: syncronize TIP (C-Interface) with current implementation

--- a/tip/529.md
+++ b/tip/529.md
@@ -11,10 +11,12 @@
 
 # Abstract
 
-An additional property is proposed for photo images to hold image metadata:
+An additional property is proposed for photo images to hold a dictionary with image metadata:
 
     myimage cget -metadata
-    myimage configure -metadata [dict create dpi 300.0]
+    myimage configure -metadata [dict create DPI 300.0]
+
+The content of the dictionary is initialized on image load and used on image save.
 
 # Rationale
 
@@ -24,7 +26,9 @@ This metadata should be accessable and setable for the following aims:
    *   Make it available after image load on script level
    *   Make it setable within the image
    *   Write it in the image file.
-   *   Prepare eventual automations on automatic scaling on screen resolution
+   *   Optimize operations by storing intermediate image representations
+
+## image resolution
 
 This TIP specially targets the resolution (DPI) value of the image.
 
@@ -39,8 +43,51 @@ I authored an extension to the Img patch to specify the dpi field of a bmp file 
 
 This may be expressed (when all packages are adopted) by:
 
-    myimage configure -metadata [dict create dpi 300.0]
+    myimage configure -metadata [dict create DPI 300.0]
     myimage write file.bmp
+
+I was just contacted by Paul Obermaier (TkImg maintainer) to extend the upper patch to other image formats.
+This motivated me again to work on the implementation.
+
+## XMP data
+
+Photo images may contain an XMP data structure which may hold structured data.
+The aim is to make this data accessible.
+The parsing of the XML structure is not part of this TIP and may be done by other packages.
+
+## Intermediate Image representation
+
+The TIP should set the base to hold an intermediate image representation (The concrete solution may follow by another TIP).
+
+The application is within the current SVG implementation included in Tk8.7a3.
+
+The used svg routines from the nanosvg project split svg processing into two steps:
+
+   *   Step 1: transform the xml data to a binary representation of the splines
+   *   Step 2: render the splines to an image presentation
+
+When svg files are loaded by:
+
+    image create photo i1 -file test.svg -format {svg -scaletoheight 16}
+
+then the file is accessed and the xml data loaded and processing step 1 and 2 is performed.
+
+When the image is scaled by:
+
+    i1 configure -format {svg -scaletoheight 32}
+
+then the same steps are performed as on image load, while only step 2 would be necessary.
+The performance is poor and the file must still be available.
+
+The idea is to store the binary representation of the splines (result of processing step 1) as a key in the **-metadata** dict (say splinesblob) and to acheve to only perform step 2 on scaling.
+
+In addition, svg image may even be "compiled" to the metadata structure, so the following command may work:
+
+    image create i1 -metadata {splineblob ...} -format {svg -scaletoheight 32}
+
+This will only work within the same patchlevel of TK, as the format may change, but it may be useful for example when packing to a starkit.
+
+In my talk on ETCL 2019, I showed an Android GUI where buttons may be scaled by a pinch to zoom gesture. The current performance is quite poor.
 
 # Specification
 
@@ -52,11 +99,11 @@ where the keys of the dictionary are specific to each photo image format.
 The following default keys are used by Tk's built in photo image formats, if the
 corresponding data is present:
 
-| Key     | Description      | Example image formats |
-|:-------:|:----------------:|:---------------------:|
-| `dpi`     | Image resolution | png                   |
-| `comment` | Text comment     | gif                   |
-| `xmp`     | xmp image data   | png                   |
+| Key       | Description      | Example image formats |
+|:---------:|:----------------:|:---------------------:|
+| `DPI`     | Image resolution | png                   |
+| `Comment` | Text comment     | gif                   |
+| `XMP`     | xmp image data   | gif,png               |
 
 If a particular image does not specify any keys (whether during creation or
 otherwise) then the dictionary will be empty.
@@ -70,8 +117,9 @@ The following commands are directly concerned:
     myimage configure -metadata $metadict
 
 It is also OK to store application data related to the image within the
-property dict. A widget may store special properties; Tk will store and return
-values it does not recognise, but otherwise will ignore them.
+property dict.
+A widget may store special properties.
+Tk will store and return values with unknown keys, but otherwise will ignore them.
 
 Any load and save command may use the content of the metadata dict.  This may
 be an ongoing process, specially within the Img patch.
@@ -88,63 +136,6 @@ Any current contents is lost.
 The **write** method uses any dict keys it knows.  Any unknown dict keys
 are ignored.
 
-## C Interface
-
-The current C interface for drivers and other programs is not sufficient to
-support the metadata dict.
-
-A new extensible interface is envisaged with:
-
-   *   a pair of functions to get or set all options of the image.
-   *   a new driver interface to basically only pass the command.
-   *   and a compatibility layer to the current driver interface
-
-There are currently functions to access the raster data (`Tk_PhotoGetImage`,
-`Tk_PhotoPutBlock`).  The other properties (**-file**, **-data**, **-format**,
-**-gamma**) are not exposed.
-
-A new interface may also be used for other image formats like SVG where the
-image data consists of the rastered image, the image data and metadata.  In
-this case, an image save operation might even not use the raster data but only
-metadata and image data.
-
-### Image Property get and set Functions
-
-Two new stub table functions are added:
-
- 1.  Tcl\_Obj \* **Tk\_PhotoGetOption**(Tk\_PhotoHandle _handle_, const char \*_OptionName_)
-
-    This retrieves the current value of an option.
-
- 2. void **Tk\_PhotoSetOption**(Tk\_PhotoHandle _handle_, const char \*_OptionName_, Tcl\_Obj \*_optionValue_)
-
-    This updates or creates the value of an option.
-
-### Revised Image Driver Commands
-
-The new command interface only passes the image handle. Any required data may
-be accquired by the get/set functions. Also, access to the raster data is done
-by the raster access functions.
-
-The current registration function is
-
-    Tk_CreatePhotoImageFormat()
-
-...
-
-# Implementation
-
-The current implementation is only a sketch in my brain.
-I hope, that an image handler can set the options after reading and a binary extension of the image handlers is not necessary.
-Nevertheless, I don't know jet.
-
-Any help and comments are appreciated.
-I am realy a novice here.
-
-Implementation may start soon with the tag tip-529-image-metadata.
-
-# Rejected Alternatives
-
 ## C interface: only use metadata dict get and set functions
 
 Two new stub table functions are added:
@@ -155,7 +146,8 @@ Two new stub table functions are added:
 
 This works well for image read. The function "Tk_PhotoSetMetadata" is called within the image read function.
 
-But it is not suitable for image write, as the required photo handle is not passed into the write functions:
+On image write, the command must be extended to contain the metadata dict.
+The current function is:
 
     static int CommonWriteGIF(Tcl_Interp *interp,
             const char *fileName,
@@ -163,39 +155,15 @@ But it is not suitable for image write, as the required photo handle is not pass
             Tcl_Obj *format,
             Tk_PhotoImageBlock *blockPtr);
 
-In consequence, the write function should be extended by the metadata object pointer.
+This is an unsolved issue.
+
+# Implementation
+
+Implementation started with the tag tip-529-image-metadata.
+
+# Rejected Alternatives
 
 # Discussion
-
-## Buffer the svg spline data to avoid double-parsing
-
-Another aim I want to reach with this TIP is to find a way to avoid multiple-parsing of svg files. The used svg routines from the nanosvg project split svg processing into two steps:
-
-   *   Step 1: transform the xml data to a binary representation of the splines
-   *   Step 2: render the splines to an image presentation
-
-When svg files are loaded by:
-
-    image create photo i1 -file test.svg -format {svg -scaletoheight 16}
-
-then the file is accessed and the xml data loaded and processing step 1 and 2 is performed.
-
-When the image is scaled by:
-
-    i1 configure -format {svg -scaletoheight 32}
-
-then the same steps are performed as on image load, while only step 2 would be necessary.
-Performance is poor and the file must still be available.
-
-My plan is to store the binary representation of the splines (result of processing step 1) as a key of **-metadata** (say splinesblob) and to acheve to only perform step 2 on scaling.
-
-In addition, svg image may even "compiled" to the metadata structure, so the following command may work:
-
-    image create i1 -metadata {splineblob ...} -format {svg -scaletoheight 32}
-
-This will only work within the same patchlevel of TK, as the format may change, but it may be useful for example when packing to a starkit.
-
-In my talk on ETCL 2019, I showed an Android GUI where buttons may be scaled by a pinch to zoom gesture. The current performance is quite poor.
 
 # Copyright
 
