TIP 529 image metadata: add example for comment metadata

--- a/tip/529.md
+++ b/tip/529.md
@@ -89,6 +89,13 @@ This will only work within the same patchlevel of TK, as the format may change, 
 
 In my talk on ETCL 2019, I showed an Android GUI where buttons may be scaled by a pinch to zoom gesture. The current performance is quite poor.
 
+## Comment data
+
+A comment may be used to save custom data in the image file.
+
+An example is a vision automation project where a test procedure is connected to each image.
+My solution is to use GIF images and to store the test procedure (a TCL script) in the gif comment.
+
 # Specification
 
 ## Metadata Dict
