TIP529 image metadata: specify new C interface with new image format driver interface.

--- a/tip/529.md
+++ b/tip/529.md
@@ -1,12 +1,12 @@
 # TIP 529: Add metadata dict property to tk photo image
-	Author:         Harald Oehlmann <oehhar@users.sourceforge.net>
-	State:          Draft
-	Type:           Project
-	Vote:           Pending
-	Created:        07-Dec-2018
-	Keywords:       Tk, image
-	Tcl-Version:    8.7
-	Tk-Branch:     tip-529-image-metadata
+    Author:         Harald Oehlmann <oehhar@users.sourceforge.net>
+    State:          Draft
+    Type:           Project
+    Vote:           Pending
+    Created:        07-Dec-2018
+    Keywords:       Tk, image
+    Tcl-Version:    8.7
+    Tk-Branch:     tip-529-image-metadata
 -----
 
 # Abstract
@@ -21,12 +21,12 @@ The content of the dictionary is initialized on image load and used on image sav
 # Rationale
 
 Image files may contain a lot of metadata like resolution, comments, GPS location etc.
-This metadata should be accessable and setable for the following aims:
+This metadata should be accessible and setable for the following aims:
 
    *   Make it available after image load on script level
    *   Make it setable within the image
-   *   Write it in the image file.
-   *   Optimize operations by storing intermediate image representations
+   *   Write its data to the image file.
+   *   Optimize operations by storing intermediate image representations. Due to that, the metadata dict may be the 3rd source (feside -file and -data options) for image data.
 
 ## image resolution
 
@@ -117,52 +117,246 @@ otherwise) then the dictionary will be empty.
 
 ## Commands
 
-The following commands are directly concerned:
+The following commands are extended by a -metadata parameter:
 
     image create photo myimage -metadata $metadict
     myimage cget -metadata
     myimage configure -metadata $metadict
+    myimage data -metadata $metadict
+    myimage put -metadata $metadict
+    myimage read -metadata $metadict
+    myimage write -metadata $metadict
 
 It is also OK to store application data related to the image within the
 property dict.
 A widget may store special properties.
-Tk will store and return values with unknown keys, but otherwise will ignore them.
+Any function reading the metadata dict will ignore unknown keys.
 
-Any load and save command may use the content of the metadata dict.  This may
+Any image format handler may use the content of the metadata dict.  This may
 be an ongoing process, specially within the Img patch.
 
-The commands are:
+Here is an overview, which command reads or sets the metadata dict:
 
-    image create photo myimage -file myfile.bmp
-    myimage configure -file myfile.bmp
-    myimage write file.bmp
+| Command | Reads current image metadata dict | reads command options metadata dict | Writes current image metadata dict |
+| :-: | :-: | :-: | :-: |
+|: image create :|: no :|: yes :|: yes :|
+|: myimage cget :|: yes :|: no :|: no :|
+|: myimage configure :|: yes :|: yes :|: no :|
+|: myimage put :|: no :|: yes :|: no :|
+|: myimage read :|: no :|: yes :|: no :|
+|: myimage data :|: no :|: yes :|: no :|
+|: myimage write :|: yes :|: yes :|: no :|
 
-The **image create** and file loading functions recreate the metadata dict.
-Any current contents is lost.
+### image create
 
-The **write** method uses any dict keys it knows.  Any unknown dict keys
-are ignored.
+Image create will parse the image data and create the metadata dict of the image.
 
-## C interface: only use metadata dict get and set functions
+As an example, a gif file with a comment would create a comment metadata key within the image:
 
-Two new stub table functions are added:
+    % image create photo myimage -format GIF -file testwithcomment.gif
+    % myimage cget -metadata
+    Comment "This is the image comment"
 
-    Tcl_Obj * Tk_PhotoGetMetadata(Tk_PhotoHandle handle)
+A metadata dict given on the command line will be merged with the parsed metadata dict with priority to the file metadata.
 
-    void Tk_PhotoSetMetadata(Tk_PhotoHandle handle, Tcl_Obj *metadata)
+An example with the same image as above:
 
-This works well for image read. The function "Tk_PhotoSetMetadata" is called within the image read function.
+    % image create photo myimage -format GIF -file testwithcomment.gif\
+       -metadata [dict create User A Comment "Comment from command line"]
+    % myimage cget -metadata
+    User A Comment "This is the image comment"
 
-On image write, the command must be extended to contain the metadata dict.
-The current function is:
+The command line metadata dict may be used to specify "pre-compiled" image data.
 
-    static int CommonWriteGIF(Tcl_Interp *interp,
-            const char *fileName,
-            WriteBytesFunc *writeProc,
-            Tcl_Obj *format,
-            Tk_PhotoImageBlock *blockPtr);
+As a example, the spline blob of an svg is saved and used to create another image:
 
-This is an unsolved issue.
+   image create photo myimage -format SVG -file "test.svg"
+   set splineblobdata [dict get [myimage cget -metadata] SplineBlob]
+
+   image create photo myotherimage -format SVG -metadata [dict create SplineBlob $splineblobdata]
+
+### myimage cget
+
+The metadata dict may be retrieved by:
+
+    myimage cget -metadata
+
+### myimage configure
+
+The metadata dict of the image may be overwritten by:
+
+    myimage configure -metadata [dict create Comment "Comment from cconfigure"]
+
+The image data is not touched and no image data interpretation is triggered.
+
+The retrival methods will return the metadata dict as for any other option:
+
+    % myimage configure -metadata
+    -metadata {} {} {} {Comment "Current comment"}
+
+Setting the -format, -data or -file option will recreate the image with the new parameters.
+In this case, an eventually present -metadata option will first replace the present metadata of the image.
+Then, the image recreation will take place (eventually using the metadata) and may add keys to the image metadata dict.
+
+It is not possible to trigger an image recreation by just specifying a metadata dict.
+
+### myimage put
+
+The put command sets (parts of) the image data by specified new image data.
+
+The -metadata property of the image is not changed.
+The reason for that is that the purpose of this command is that only parts of the image are replaced.
+To replace the whole image including metadata, the configure command may be used by setting the -data option.
+
+Example with gif data containing a comment:
+
+    % image create myimage -metadata [dict create Comment "Comment from image create"]
+    % myimage put $GIFWithCommentData
+    % myimage cget -metadata
+    Comment "Comment from image create"
+
+A -metadata option may be specified to support the image read. Nevertheless, this metadata is not included in the metadata property of the image.
+
+Example:
+
+    % image create myimage -metadata [dict create Comment "Comment from image create"]
+    % myimage put $GIFWithCommentData -metadata [dict create Comment "Comment from put command line"]
+    % myimage cget -metadata
+    Comment "Comment from image create"
+
+Example with used metadata image data
+
+    % image create myimage
+    % myimage put "" -format SVG -metadata [dict create SplineBlob $splineblobdata]
+
+## myimage read
+
+The read command sets (parts of) the image data by new image data read from a file.
+This command acts like the put command with the difference, that the image data comes from a file.
+
+It is not possible to use image data from the -metadata command dict, as a file must be specified, which can not be omitted.
+
+The -metadata property of the image is not changed.
+The reason for that is that the purpose of this command is that only parts of the image are replaced.
+To replace the whole image including metadata, the configure command may be used by setting the -file option.
+
+Example with a gif file containing a comment:
+
+    % image create myimage -metadata [dict create Comment "Comment from image create"]
+    % myimage read gifwithcomment.gif
+    % myimage cget -metadata
+    Comment "Comment from image create"
+
+A -metadata option may be specified to support the image read. Nevertheless, this metadata is not included in the metadata property of the image. There is currently no practical application for this, but there might be examples which use that.
+
+Example:
+
+    % image create myimage -metadata [dict create Comment "Comment from image create"]
+    % myimage read test.gif -metadata [dict create Comment "Comment from put command line"]
+    % myimage cget -metadata
+    Comment "Comment from image create"
+
+## myimage data
+
+The data command writes the image data into a variable.
+
+If the image formats supports metadata, it is included in the output file.
+
+If a -metadata option is given, the metadata property of the image is ignored.
+Otherwise, the metadata property of the image is used.
+
+Example to write a comment in gif data included in the image properties:
+
+    % image create myimage -file test.png -metadata [dict create Comment "Comment from image create"]
+    % myimage data -format "GIF"
+    ... GIF data with comment included
+
+Example to specify the comment with the command options
+
+    % image create myimage -file test.png
+    % myimage data -format "GIF"-metadata [dict create Comment "Comment from data command"]
+    ... GIF data with comment included
+
+## myimage write
+
+The write command writes the image data to a file.
+With respect to metadata, it works the same way as the data command.
+
+Example to write a metadata comment:
+
+    % image create myimage -file test.png
+    % myimage write GifwithComment.gif -format "GIF"-metadata [dict create Comment "Comment from write command"]
+    ... GIF data with comment included
+
+# C interface
+
+Extend the image by the property metadata.
+
+## Image format driver interface
+
+For image format drivers, a new registration procedure is proposed which includes functions with the metadata as a parameter:
+
+    void Tk_CreatePhotoImageFormat87(const Tk_PhotoImageFormat87 *formatPtr)
+
+The function parameters in Tk_PhotoImageFormat87 are changed as follows:
+
+      int (Tk_ImageFileMatchProc87) (Tcl_Channel chan, const char *fileName,
+          Tcl_Obj *format, int *widthPtr, int *heightPtr, Tcl_Interp *interp,
+          Tcl_Obj **metadataPtr);
+      int (Tk_ImageStringMatchProc87) (Tcl_Obj *dataObj, Tcl_Obj *format,
+          int *widthPtr, int *heightPtr, Tcl_Interp *interp, Tcl_Obj **metadataPtr);
+      int (Tk_ImageFileReadProc87) (Tcl_Interp *interp, Tcl_Channel chan,
+          const char *fileName, Tcl_Obj *format, Tk_PhotoHandle imageHandle,
+          int destX, int destY, int width, int height, int srcX, int srcY,
+          Tcl_Obj **metadataPtr);
+      int (Tk_ImageStringReadProc87) (Tcl_Interp *interp, Tcl_Obj *dataObj,
+          Tcl_Obj *format, Tk_PhotoHandle imageHandle, int destX, int destY,
+          int width, int height, int srcX, int srcY, Tcl_Obj **metadataPtr);
+      int (Tk_ImageFileWriteProc87) (Tcl_Interp *interp, const char *fileName,
+          Tcl_Obj *format, Tk_PhotoImageBlock *blockPtr, Tcl_Obj *metadata);
+      int (Tk_ImageStringWriteProc87) (Tcl_Interp *interp, Tcl_Obj *format,
+          Tk_PhotoImageBlock *blockPtr, Tcl_Obj *metadata);
+
+If the metadata object is writable and eventually readable by the called, a pointer to the object object (Tcl_Obj **metadataPtr) is passed.
+If the metadata is only readable, the object pointer (Tcl_Obj *metadata) is passed.
+
+If a pointer to the object pointer is passed, the following rules apply to the driver:
+
+   *   The pointer may point to a NULL value which says, that there is currently no metadata.
+   *   A NULL value may be written to say, that there is no metadata to output.
+   *   If the pointer points to a object it must be taken care, that this object may be shared. If the metadata object should be changed, a copy must be done for a shared object.
+
+If the object pointer is passed, the following rules apply:
+
+   *   A NULL value indicates "no metadata".
+
+## Usage of metadata dict by the functions
+
+### Tk\_ImageFileMatchProc87, Tk\_ImageStringMatchProc87
+
+The passed metadata may be used as image data or parameters.
+
+The metadata creation may happen here and in the following read command.
+In addition, it may be used to pass information to the read command.
+
+The metadata may be set by intermediate or final result data.
+This data may be used by a following Read command and is passed through.
+
+### Tk\_ImageFileReadProc87, Tk\_ImageStringReadProc87
+
+The metadata returned by the match function is passed as input.
+
+The written metadata is the resulting metadata.
+
+It is only shown to the script level on an image creation and configure command.
+The put and read command does ignore the read metadata.
+
+### Tk\_ImageFileWriteProc87, Tk\_ImageStringWriteProc87
+
+The metadata is only passed for reading.
+The contained keys may be used to include the data in the result data.
+
+For example, a GIF comment may be written.
 
 # Implementation
 
