TIP 529 image metadata: Added parameter aim and reasoning why put/read functions do not change the metadata property dict.

--- a/tip/529.md
+++ b/tip/529.md
@@ -27,6 +27,7 @@ This metadata should be accessible and setable for the following aims:
    *   Make it setable within the image
    *   Write its data to the image file.
    *   Optimize operations by storing intermediate image representations. Due to that, the metadata dict may be the 3rd source (feside -file and -data options) for image data.
+   *   Pass additional data to the image format driver where the "-format" option extension is not suitable.
 
 ## image resolution
 
@@ -114,6 +115,8 @@ corresponding data is present:
 
 If a particular image does not specify any keys (whether during creation or
 otherwise) then the dictionary will be empty.
+
+Each photo image format driver may define additional keys and may decide to use them for input (as a parameter for image read and/or image write), output (as an image read result) or both.
 
 ## Commands
 
@@ -206,6 +209,7 @@ The put command sets (parts of) the image data by specified new image data.
 
 The -metadata property of the image is not changed.
 The reason for that is that the purpose of this command is that only parts of the image are replaced.
+Other options specified to the put command, like the -data property or an eventual -format option do not change the current property values neither.
 To replace the whole image including metadata, the configure command may be used by setting the -data option.
 
 Example with gif data containing a comment:
@@ -238,6 +242,7 @@ It is not possible to use image data from the -metadata command dict, as a file 
 
 The -metadata property of the image is not changed.
 The reason for that is that the purpose of this command is that only parts of the image are replaced.
+Other options specified to the put command, like the -file and an eventual -format option do not change the current property values neither.
 To replace the whole image including metadata, the configure command may be used by setting the -file option.
 
 Example with a gif file containing a comment:
